Fixing the thoughts image on tablet and less

--- a/astro/src/components/thoughts/ThoughtContent.css
+++ b/astro/src/components/thoughts/ThoughtContent.css
@@ -75,3 +75,9 @@ html.dark {
     font-size: 1rem;
     text-decoration: underline;
 }
+
+@media (max-width: 767px) {
+    .thought-wrapper .cover .cover-image {
+        height: auto;
+    }
+}
